--- a/app/globals.css
+++ b/app/globals.css
@@ -17,12 +17,49 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html,body {
+
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  background-color: #02162b;
+}
+
+.container{
+  max-width: max-content;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(2,22,43);
+background: linear-gradient(90deg, rgba(2,22,43,1) 0%, rgba(0,71,171,1) 35%, rgba(0,255,243,1) 100%);
+  padding: 1rem;
+  border-bottom: 5px solid rgba(255, 255, 255, 0.199);
+}
+
+.logo {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+
+.logo a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+}
+
+.links a {
+  margin: 0 0.5rem 0 0.5rem;
+  color: #fff;
+  text-decoration: none;
+}
+
+.links a:hover {
+  text-decoration: underline;
 }
